[project]
authors = [{name = "corednoir", email = "252454232+corednoir@users.noreply.github.com"}]
dependencies = ["music-tag>=0.4.3,<0.5", "bs4>=0.0.2,<0.0.3", "click>=8.3.1,<9", "yt-dlp>=2025.12.8,<2026", "ffmpeg-python>=0.2.0,<0.3", "pytest-playwright>=0.7.2,<0.8", "python-magic>=0.4.27,<0.5", "pillow>=12.1.0,<13"]
name = "nts"
requires-python = ">= 3.11"
version = "1.3.8"

[project.scripts]
nts = "nts.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nts = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
